// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application should render with all props 1`] = `
<ThemeProvider
  className="application-theme-provider"
  isGlobalTheme={true}
  themeName="test-theme"
>
  <Base
    className="application-base"
    customMessages={
      Object {
        "custom": "messages",
      }
    }
    locale="en"
    strictMode={false}
    translationsLoadingPlaceholder={
      <div>
        placeholder
      </div>
    }
  >
    <ActiveBreakpointProvider>
      <div>
        content
      </div>
    </ActiveBreakpointProvider>
  </Base>
</ThemeProvider>
`;

exports[`Application should render with minimal props 1`] = `
<ThemeProvider
  className="application-theme-provider fill"
  isGlobalTheme={false}
>
  <Base
    className="application-base fill"
    customMessages={Object {}}
    locale="en"
    strictMode={false}
  >
    <ActiveBreakpointProvider>
      <div>
        content
      </div>
    </ActiveBreakpointProvider>
  </Base>
</ThemeProvider>
`;
